# backend/app/Models/Product.php
@@ -6,7 +6,7 @@ use Illuminate\Database\Eloquent\Model;
 
 class Product extends Model
 {
-    protected $fillable = ['name', 'price', 'is_active', 'points'];
+    protected $fillable = ['name', 'price', 'is_active', 'points', 'points_cost'];
 
     public function orderItems()
     {
